--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="container">
         <div class="columns">
           <div class="column is-two-thirds">
-            <iframe height="500px" width="100%" src="https://repl.it/repls/TimelySlushyVariables?lite=true&outputonly=1" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+            <iframe height="500px" width="100%" src="https://repl.it/@LucasRocketLL/tsconsole?lite=true&outputonly=1" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
           </div>
           <div class="column">
             <div class="container">
@@ -105,7 +105,7 @@
           Testing for <strong>T.M.I.</strong>!
         </p>
         <h2>Natural Numbers</h2>
-        <code>
+        <pre><code>
           ||||||
           :
           0.-
@@ -121,7 +121,7 @@
           1010.
           :
           |||||
-        </code>
+        </code></pre>
         <p class>
             Lorem ipsum dolor sit amet, vel pellentesque non elit, consectetuer mi aliquam, lectus nunc reiciendis, adipiscing turpis justo tellus at, urna viverra enim massa urna erat. Elit potenti in sem inceptos nullam, diam id platea erat in odio, lorem in commodo ultricies quam nam id, urna at urna orci, quis urna. Id pulvinar eget dis fusce posuere ac, nunc euismod ante metus lobortis, integer quam sed donec lacinia dolor eleifend, cras hymenaeos. Arcu egestas, quisque purus, vivamus pellentesque faucibus aut luctus, in blandit suscipit vehicula. Ac sed, aliquam erat dolor elit nulla curabitur, eleifend dolor montes eleifend ridiculus placerat, pellentesque accumsan netus in eget a elit. Mauris posuere pharetra eleifend lectus sed, metus ut dui aliquam, risus ultrices massa vestibulum est animi elit. Vitae in nulla etiam nonummy, dui tincidunt duis nulla amet in, ac ultricies vivamus arcu, dictum luctus dolor. Pellentesque non lectus mattis, nulla in porta aliquam ligula tempus, dictum risus ultrices in non exercitationem nibh, orci tempus integer eget, neque ornare. Sed praesent cursus dis vulputate luctus mattis.
         </p>
