--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
         <p>
           We have used 9 different objects to create a self-contained mathematical and logical language that can be further extended to define more subjects such as science, humanities and arts. We started by defining basic logical and mathematical expressions.
         </p>
+        <p>
+          First of all, we valued the numbers of '.' and arabian characters in order to make extraterretorial civilization understand modern numerical system. After that, we defined Equal, Inequal, and the four fundamental arithmetic operations. Also, we made them know the defination of 'set', a basis of inclusion relation, proposition, and its True/False. Starting from Natural numbers, we defined Integers, Rationals, and Real numbers. And finally we interpreted Elements of the universe, Solar system, and Human culture.
+          Especially, we defined the relation between the device which will send out TerraStele(9 characters decimal system) and the device which will send out pixelized image(5 characters Quinary system) in order to show them "refer to 'image' signal".
+        </p>
         <pre><p>
             /help
 
